--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,45 +1,72 @@
 ﻿body {
-    font-family: 'Segoe UI', Tahoma, Gevena, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Gevena, Verdana, sans-serif;
 }
-input, textarea {
-    font-size: 18px;
-    width: 200px;
+input,
+textarea {
+  font-size: 18px;
+  width: 200px;
 }
 label {
-    font-size: 16px;
+  font-size: 16px;
 }
 
-input[type=submit] {
-    width: auto;
+input[type="submit"] {
+  width: auto;
 }
 #theForm {
-    background-color:lightgray
+  background-color: lightgray;
 }
-#theForm input[type=submit] {
-    background-color : green;
-    color: white;
+#theForm input[type="submit"] {
+  background-color: green;
+  color: white;
 }
 
 ul.product-props {
-    font-size: small;
+  font-size: small;
 }
 ul.product-props li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .product-info {
-    border: 1px solid grey;
-    display: inline-block;
-    padding: 5px;
-    margin: 2px;
-    width: 450px;
-    background-color: lightgray;
-    border-radius: 5px;
+  border: 1px solid grey;
+  display: inline-block;
+  padding: 5px;
+  margin: 2px;
+  width: 450px;
+  background-color: lightgray;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
 }
 
 .product-info img {
-    margin: 3px;
-    float: left;
-    border: 1px solid black;
-    max-width: 150px;
+  margin: 3px;
+  float: left;
+  border: 1px solid black;
+  max-width: 150px;
+}
+
+#loginToggle {
+  cursor: pointer;
+}
+
+.popup-form {
+  padding: 5px;
+  border: 2px black outset;
+  display: inline-block;
+}
+
+
+.popup-form input {
+ width: 200px;
+}
+.popup-form label {
+ width: 150;
+ display: inline-block;
+}
+
+
+
+.popup-form input[type=checkbox], .popup-form input[type=submit]{
+    width: auto;
 }
