--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,3 +70,16 @@ ul.product-props li {
 .popup-form input[type=checkbox], .popup-form input[type=submit]{
     width: auto;
 }
+
+menu li {
+    display: inline;
+}
+
+menu li::after {
+    content: ' | ';
+
+}
+
+menu li:last-of-type::after {
+    content: "";
+}
